[package]
name = "sqlite-robotstxt"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A SQLite extension for parsing robots.txt files"
homepage = "https://github.com/asg017/sqlite-robotstxt"
repository = "https://github.com/asg017/sqlite-robotstxt"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["lib", "dylib", "staticlib"]


[dependencies]
sqlite-loadable = "0.0.6-alpha.2"
robotstxt = "0.3.0"

